modules/apps/traefik/templates/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: traefik
  annotations:
    gardener.cloud/validation: "ignored"
spec:
  controllerName: traefik.io/gateway-controller
  description: "Implemented by Traefik v3 (ADR-005)"
